--- a/source/_posts/2012-07-20-scss.markdown
+++ b/source/_posts/2012-07-20-scss.markdown
@@ -1,11 +1,11 @@
 ---
 layout: post
-title: "CSS & SCSS & Sass"
+title: "CSS, Sass, SCSS"
 date: 2012-07-19 10:36
 comments: true
 categories: CSS
 ---
 
-CSS < SCSS < Sass
+CSS < Sass < SCSS
 
 + <http://sass-lang.com/>
