--- a/source/_posts/2012-10-11-nginx.markdown
+++ b/source/_posts/2012-10-11-nginx.markdown
@@ -3,7 +3,7 @@ layout: post
 title: "Nginx"
 date: 2012-10-11 11:04
 comments: true
-categories: 
+categories: ["Web Server"]
 ---
 
     # Passenger
