--- a/source/_posts/2013-05-22-git-flow.markdown
+++ b/source/_posts/2013-05-22-git-flow.markdown
@@ -1,8 +1,10 @@
 ---
 layout: post
-title: "git-flow"
+title: "使用 git-flow"
 date: 2013-05-22T17:28:30+08:00
 comments: true
 external-url: 
+published: false
 categories: 
+- Git
 ---
