--- a/source/_posts/2012-01-01-html.markdown
+++ b/source/_posts/2012-01-01-html.markdown
@@ -8,9 +8,8 @@ categories:
 
 ### HyperText Markup Language
 
-<http://zh.wikipedia.org/wiki/HTML>
+http://zh.wikipedia.org/wiki/HTML
 
+### Haml
 
-Haml
-
-Jade
+### Jade
