--- a/source/_posts/2012-07-16-jekyll.markdown
+++ b/source/_posts/2012-07-16-jekyll.markdown
@@ -3,9 +3,9 @@ layout: post
 title: "Jekyll"
 date: 2012-07-16 21:50
 comments: true
-categories: Ruby
-author: zx1986
-published: true
+categories: 
+- Ruby
+- Blog
 ---
 
 http://octopress.org/blog/2011/07/23/octopress-20-surfaces/    
