--- a/source/_posts/2012-07-16-ruhoh.markdown
+++ b/source/_posts/2012-07-16-ruhoh.markdown
@@ -3,7 +3,9 @@ layout: post
 title: "使用 Ruhoh 寫 Blog"
 date: 2012-07-16 22:00
 comments: true
-categories: [Ruby, Markdown]
+categories:
+- Ruby
+- Blog
 ---
 
 + http://ruhoh.com/usage/
