--- a/source/_posts/2012-07-20-scss.markdown
+++ b/source/_posts/2012-07-20-scss.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "CSS, Sass, SCSS"
+title: "CSS &amp; Sass &amp; SCSS"
 date: 2012-07-19 10:36
 comments: true
 categories: CSS
