--- a/source/_posts/2013-05-23-resque.markdown
+++ b/source/_posts/2013-05-23-resque.markdown
@@ -1,10 +1,10 @@
 ---
 layout: post
-title: "redis"
+title: "Resque"
 date: 2013-05-23T17:04:00+08:00
 comments: true
 external-url: 
 categories: 
 - NoSQL
-- Database
+- Queue
 ---
