修正一下 jobdeer 文章的結尾

--- a/_posts/2016-02-14-jobdeer.markdown
+++ b/_posts/2016-02-14-jobdeer.markdown
@@ -5,7 +5,7 @@ date: 2016-01-06 08:35:50
 categories:   
 ---   
    
-這是一本書，書如其名。   
+《程序員跳槽全攻略》是一本書，書如其名。   
    
 書成於 2014 年末，現在是 2016 年初，剛好歷經一年。      
 書裡面的東西，我認為還不算過時，應該可以再應用個三年。      
@@ -147,4 +147,7 @@ categories:
 中了一千萬，還是沒有要走，那算挺喜歡這個工作的；   
 中了一億，仍舊想繼續這個工作，那就是真的很愛這份工作了。   
    
-希望大家都能是億元工作者，共勉之。   
+希望大家都能是熱愛自己工作的人，共勉之。
+其實喜歡自己工作的時候，那就已經不是在工作了，只是在玩耍而已。
+
+別太貪玩了 :-)
